# Witzper

./: .gitignore  IDEAS.md  README.md  TODO.md  Witzper  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
configs/: app_categories.toml  app_rules.toml  default.toml  entitlements-app.plist  entitlements-python.plist
docs/: architecture.md
flow/: __init__.py  __main__.py  config.py
flow/context/: app_context.py  dictionary.py  few_shot.py  styles.py
flow/core/: audio.py  command_mode.py  doctor.py  hotkey.py  orchestrator.py  setup_wizard.py  user_config.py  vad.py
flow/insert/: inserter.py
flow/models/: asr_base.py  cleanup.py  command.py  mlx_loader.py  parakeet.py  qwen3_asr.py  whisper_mlx.py
flow/personalize/: edit_watch.py  snippets.py  store.py  train_lora.py
flow/ui/: pill.py  stream.py
scripts/: build_app.sh  build_icon.py  download_models.sh  live_e2e.py  post_commit_rebuild.sh  release.sh  run.sh  setup.sh  test_pipeline.py  train_nightly.sh  witzper_launcher.m
swift-helper/: Package.swift  README.md
swift-helper/Sources/FlowHelper/: Dashboard.swift  DictionaryView.swift  DownloadManager.swift  HUD.swift  HotkeyCapture.swift  Inserter.swift  LiveMicMeter.swift  ModelCatalog.swift  ModelPickerView.swift  OnboardingWindow.swift  PermissionManager.swift  SQLiteStore.swift  SettingsView.swift  SnippetsView.swift  Sounds.swift  Updater.swift  main.swift
tests/: test_asr_fallback.py  test_cleanup_guardrail.py  test_cli_run_shutdown.py  test_cli_style.py  test_command_llm.py  test_command_mode_controller.py  test_config.py  test_correction_store.py  test_default_model_sync.py  test_dictionary.py  test_doctor.py  test_edit_watch.py  test_hotkey_router.py  test_inserter.py  test_live_e2e.py  test_mlx_loader.py  test_setup_wizard.py  test_snippets.py  test_stream_server.py  test_streaming_reuse.py  test_swift_dashboard.py  test_swift_hotkeys.py  test_swift_lifecycle.py  test_train_lora.py  test_user_config.py  test_vad.py
